<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="solversteam.familycab.Activities.Contact_Us">
    <include
        layout="@layout/toolbar"
        android:id="@+id/include"/>
    <ScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/text_margin15"

        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@color/Black"
                    android:padding="@dimen/padding_10"
                    android:layout_marginTop="@dimen/text_margin15"
                    android:layout_height="wrap_content">
                    <solversteam.familycab.Util.TextViewWithFont
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_margin15"
                        android:textColor="@color/mdtp_white"
                        android:text="@string/notes"/>

                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/text_margin15"
                    android:textSize="@dimen/text_title"
                    android:padding="@dimen/padding_10"

                    android:background="@drawable/whiteborder"
                    android:hint="@string/name"

                    android:maxLines="1"
                    android:id="@+id/ContactUs_name_edittext"
                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/subject"
                    android:background="@drawable/whiteborder"
                    android:layout_marginTop="@dimen/text_margin15"
                    android:textSize="@dimen/text_title"
                    android:padding="@dimen/padding_10"
                    android:maxLines="1"
                    android:id="@+id/ContactUs_subject_edittext"

                    android:layout_height="wrap_content" />
                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/message"
                    android:id="@+id/ContactUs_message_edittext"
                    android:layout_marginTop="@dimen/text_margin15"
                    android:textSize="@dimen/text_title"
                    android:padding="@dimen/padding_10"
                    android:background="@drawable/whiteborder"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="match_parent"
                    android:background="@drawable/blackborder"
                    android:text="@string/send"
                    android:layout_marginTop="@dimen/text_margin15"
                    android:textSize="@dimen/text_title"
                    android:padding="@dimen/padding_10"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/ContactUs_send_button"

                    android:layout_height="wrap_content" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>
</LinearLayout>