<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/text_margin20"
    android:layout_marginLeft="@dimen/text_padding"
    android:layout_marginRight="@dimen/text_padding"
    android:background="@color/colorBgTransparent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorBgTransparent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_carve"
        android:text="@string/callcaptain"
        android:padding="@dimen/text_margin20"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="@dimen/text_default"
        android:id="@+id/call_button"

        />
    <Button
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_carve2"
         android:textAllCaps="false"
        android:textSize="@dimen/text_default"
        android:text="@string/sendemail"
        android:padding="@dimen/text_margin20"
         android:textColor="@color/colorAccent"
        android:id="@+id/sendemail_button"

        />

    <Button
        android:padding="@dimen/text_margin20"
        android:layout_marginTop="@dimen/text_margin20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_carve3"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="@dimen/text_default"
        android:text="@string/profile_cancel_btn"
         android:id="@+id/cancel_button"

        />
</LinearLayout>
</LinearLayout>