<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_padding">

        <EditText
            android:id="@+id/reg_code_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:background="@drawable/bg_reg_login_layout_border"
            android:gravity="start"
            android:hint="@string/reg_code"
            android:inputType="number"
            android:padding="@dimen/text_padding"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="@dimen/text_default" />

        <Button
            android:id="@+id/reg_sendCode_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:background="@color/colorButtonSec"
            android:padding="@dimen/text_padding"
            android:text="@string/reg_send_btn"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_default" />

        <TextView
            android:id="@+id/reg_reSendCode_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:gravity="center"
            android:padding="@dimen/text_padding"
            android:text="@string/reg_resend_code_title"
            android:textColor="@color/colorButtonSec"
            android:textSize="@dimen/text_xsmall"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgTransparent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>