<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgTransparent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_margin30"
        android:layout_marginRight="@dimen/text_margin30"
        android:orientation="vertical"
        android:background="@drawable/curve"
        android:paddingTop="@dimen/text_padding"
        android:layout_weight="1">
        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:id="@+id/image_contact"
            android:src="@drawable/familycap"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactus"
                android:textSize="@dimen/text_title"
                android:textColor="@color/bgLayoutColor"
                android:layout_margin="@dimen/text_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgcontact"
                android:textSize="@dimen/text_default"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginRight="@dimen/text_padding"
                android:layout_marginTop="@dimen/text_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msgcontact2"
                android:textSize="@dimen/text_default"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginRight="@dimen/text_padding"
                android:layout_marginTop="@dimen/text_padding"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginEnd="@dimen/text_padding"
            android:layout_marginBottom="@dimen/text_padding"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/callus"
                android:id="@+id/call_us_text"
                android:textSize="@dimen/text_default"
                android:layout_marginLeft="@dimen/text_padding"
                android:layout_marginRight="@dimen/text_padding"
                android:layout_marginTop="@dimen/text_padding"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailus"
                android:textSize="@dimen/text_default"
                android:layout_marginLeft="@dimen/text_padding"
                android:id="@+id/email_us_text"
                android:layout_marginRight="@dimen/text_padding"
                android:layout_marginTop="@dimen/text_padding"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/padding_20"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:gravity="center"
                android:layout_gravity="top"
                android:alpha=".6"
                 android:background="@drawable/circle2"
                android:layout_marginTop="@dimen/text_padding"
                 >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close"
                android:id="@+id/close_button"
                android:background="@drawable/circle2"
                 />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
