<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">

        <EditText
            android:id="@+id/change_password_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:background="@drawable/bg_reg_login_layout_border"
            android:gravity="start"
            android:hint="@string/reg_Password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_10"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="@dimen/text_default" />

        <EditText
            android:id="@+id/change_password_again_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:background="@drawable/bg_reg_login_layout_border"
            android:gravity="start"
            android:hint="@string/reg_Password_again"
            android:inputType="textPassword"
            android:padding="@dimen/padding_10"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:textSize="@dimen/text_default" />

        <Button
            android:id="@+id/change_password_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default"
            android:background="@color/colorButtonSec"
            android:padding="@dimen/padding_10"
            android:text="@string/submit"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_default" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBgTransparent"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</FrameLayout>